feat: add test data configuration with full domain relationships